--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 .landing-grid {
   background: #833ab4;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right,  #d8a49e, #a8a495);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right,  #aaa8a8, #ffffff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right,  #242423, #ffffff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   text-align: center;
   position: fixed;
   top: 0;
